fix database structure: the model of table has collection in the restaurant document. fix gui: remove save button that not use. added toString to table (not use). fix: table model edit- check table details after edit the table details. added: table model live data not tested.

--- a/src/main/resources/application/fxml/tabMenu.fxml
+++ b/src/main/resources/application/fxml/tabMenu.fxml
@@ -81,8 +81,7 @@
                       <right>
                           <VBox prefHeight="472.0" prefWidth="80.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                               <children>
-                                  <VBox id="vbox_edit_menu" fx:id="vbox_edit_menu" prefHeight="432.0" prefWidth="86.0" />
-                                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="83.0" text="Save" />
+                                  <VBox id="vbox_edit_menu" fx:id="vbox_edit_menu" />
                               </children>
                           </VBox>
                       </right>
