--- a/src/main/resources/application/fxml/tabMenu.fxml
+++ b/src/main/resources/application/fxml/tabMenu.fxml
@@ -1,24 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckMenuItem?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<TabPane fx:id="tabPane" prefHeight="501.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.TabMenuController">
+<TabPane fx:id="tabPane" prefHeight="501.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.TabMenuController">
       <tabs>
           <Tab fx:id="options" text="Options">
               <content>
@@ -94,7 +79,7 @@
               <content>
                   <BorderPane prefHeight="200.0" prefWidth="200.0">
                       <right>
-                          <VBox prefHeight="472.0" prefWidth="80.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+                          <VBox maxWidth="1.7976931348623157E308" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                               <children>
                                   <VBox id="vbox_edit_menu" fx:id="vbox_edit_menu" />
                               </children>
