--- a/src/main/resources/application/fxml/tabMenu.fxml
+++ b/src/main/resources/application/fxml/tabMenu.fxml
@@ -9,9 +9,9 @@
               <content>
             <GridPane fx:id="gridpane_options">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="15.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" percentWidth="20.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="65.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -25,12 +25,8 @@
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                          <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.rowSpan="2147483647">
-                              <children>
-                                  <Button mnemonicParsing="false" text="Open Res" />
-                                  <Button mnemonicParsing="false" text="Close Res" />
-                              </children>
-                          </VBox>
+                            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Open Res" GridPane.rowIndex="4" />
+                            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Close Res" GridPane.rowIndex="5" />
                               <Label graphicTextGap="0.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="vcx" GridPane.columnIndex="1" />
                               <TextField fx:id="tf_name" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="BP" GridPane.columnIndex="2" />
                               <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Choose tags:" GridPane.columnIndex="1" GridPane.rowIndex="1" />
